<resources>
    <string name="app_name">Covid2</string>
    <string name="covid">COVID</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user_register_here">New user ? Register here</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in_here">Already registered ? Sign in here</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
