<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/background_light"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/black"
            android:padding="30dp"
            android:text="@string/covid"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textSize="23sp"
            android:layout_marginLeft="0dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="23sp"
            android:layout_marginLeft="0dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginLeft="130dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/new_user_register_here"
            android:clickable="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:focusable="true"
            android:layout_marginLeft="0dp" />

    </LinearLayout>
</ScrollView>








